added custom colors, routes, screens and complete the welcome screen design

--- a/web/js/vanilla/player/assets/css/main.css
+++ b/web/js/vanilla/player/assets/css/main.css
@@ -71,7 +71,7 @@ p {
   min-height: 70px;
   margin: auto;
   text-align: center;
-  background-color: #ff0000;
+  background-color: #FF0000;
   color: #fff;
   border-radius: 10px;
   display: flex;
@@ -80,6 +80,7 @@ p {
   padding: 10px;
   line-height: 24px;
 }
+
 
 #music_container .player_container div.hide_error {
   margin-top: -150px;
@@ -283,9 +284,4 @@ p {
   width: 60px;
   margin-bottom: 6px;
   cursor: pointer;
-}
-
-[data-isplaying="true"] {
-  background-color: #ff00002a;
-  border-radius: 100%;
 }
